Tests/Fail/Test062.ML
(* Structure tests. *)
structure S: sig val x: int end = struct val x = true end;
